--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,19 @@
 </head>
 <body onload="initCarousel();">
 		<div class="container">
-			<div class="btn__bar">
-			<div class="btn btn--prev" onclick="prevClick();">
-				◀
-			</div><div class="btn btn--next" onclick="nextClick();">
-				▶
-			</div>
-		</div>
+
 				<div class="carousel__container">
+					<div class="btn__bar">
+						<span>Riding Election Results</span>
+						<div class="btn__container">
+							<div class="btn btn--prev" onclick="prevClick();">
+							&lsaquo;
+						</div><div class="btn btn--next" onclick="nextClick();">
+							&rsaquo;
+						</div>
+						</div>
+
+				</div>
 					<ul class="carousel">
 
 					</ul>
